--- a/css/cima.css
+++ b/css/cima.css
@@ -1,7 +1,7 @@
-@media all{
+
 
     body{
-        width: 100%;
+      
         margin: 0;
         background: #fbf6f6;
     
@@ -98,27 +98,164 @@
         display: none;
     }
     
-    
-    
-    
-    img{
-    width:400px;
-    height:500px;
+    @media (max-width:799px) {
+
+    .section-p1{
+       padding: 40px 40px;
     }
+
+    #navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0,0,0, 0.01);
+        padding: 80px 0 0 10px ;
+        transition: 0.3s;
+    }
+
+    #navbar.active{
+        right: 0px;
+    }
+
+    #navbar li{
+        margin-bottom: 25px;
+    }
+
+    #navbar li ul{/*new*/
+         position: relative;
+         width: 100%;
+    }
+
+    #navbar li ul li{/*new*/
+        background: #E3E6F3;
+    }
+
+    #mobile{
+        display:flex;
+        align-items: center;
+        
+    }
+
+    #mobile i{
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left:20px ;
+    }
+
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #hero{
+         
+        height: 70vh;
+        background-position: top 30% right 30%;
+        padding: 0 80px;
+        
+    }
+
+    #product1 .pro-container{
+        justify-content:center;
+    }
+
+    #product1 .pro{
+        margin: 15px;
+    }
+
+    #newsletter .form{
+        width: 70%;
+    }
+}
+
+
+    /*section1 header*/
+
+ .cc{
+        font-size: 22px;
+        margin-top:-199px;
+        padding: 24px;
+        color: currentcolor;
+        font-family: emoji;
+        margin-left:379px;
+    }
+    @media (max-width:700px) {
+    .cc{
+    
+    
+    font-size: 13px;
+    color: currentcolor;
+    font-family: emoji;
+  margin-top:-189px;
+margin-left:30%;
+}
+
+}
+.cima{
+width:100%;
+height:500px;
+
+}
+
+
+
+
+
+
+
+
+
+
+       /*section2 images and table*/
+    
+    .im{
+    width:500px;
+    height:500px;
+    padding:10px;
+border-radius:15px;
+
+}
+
+
+.im:hover {
+
+transform:scale(1.2);
+cursor: pointer;
+}
     .ar,.hr,.ac,.an{background: #673ab71a;
     
         border-left: 8px solid black;
     }
     
-    P{
-    font-size:40px;
-    
-    /*text-shadow: 3px 2px #877777;*/
-    margin: 8px;
+.ar{
+
+ font-size:30px;
+    margin-top: 50px;
         padding: 10px;
-    }
+   font-family: emoji;
+
+}
+
+
+    pre{
+    font-size:30px;
+    margin-top: 38px;
+        padding: 10px;
+   font-family: emoji;
+ }
     
-    
+     
     
     
     
@@ -131,22 +268,13 @@
     
     }
     
-    .cc{
-    position: absolute;
-        font-size: 22px;
-        top:181px;
-        padding: 24px;
-        color: currentcolor;
-    font-family: emoji;
-    left:405px;
-    }
-    
+   
     
     table {
         width: 600px;
-     position: relative;
-        top: -280px;
-       left: 600px;
+        height:500px;
+     margin-top: -515px;
+    margin-left: 590px;
         direction: rtl;}
     th{
         border: 2px solid #ddd;
@@ -165,50 +293,194 @@
     .checked{
     color:orange;
     }
+
+
+
+
     
+@media(max-width:700px){
+
+table{
+
+        width: 500px;
+        height:470px;
+       margin-top: 11px;
+    margin-left:9px;
+        direction: rtl;}
+
+
     
-    .im{color: red;
-    position: relative;
-        top: 170px;
+    .im{
+       margin-top: 170px;
         padding: 10px;
     left:30px;
+    width:426px;
+    height:470px;
     
-    }
-    
-    button{
-    
-    
-    position: relative;
-        left: 282px;
-        top: -56px;
-        font-size: 22px;}
-    iframe{
-    
-    position: relative;
+    }}
+
+
+  iframe{
+       width:700px;
+       height:426px;
         top: -84px;
         padding: 27px;
-        margin: 10px;
-    
-    }
+        margin: 10px;}
+
+@media(max-width:700px){
+
+ iframe{
+        height:426px;
+        width:500px;
+        top: -84px;
+        padding: 27px;
+        margin: 10px;}}
     
     .a{position: relative;
-        left: 127px;
-        top: -76px;
+    margin-left: 370px;
+    top: -63px;
+    margin-top: -3px;
     }
     
-    .a2,.s{position: relative;
+
+  .af{
+       position: relative;
+       left: 50px;
+       top: -67px;
+       margin-left: 310px;
+       margin-top: -35px;}
+ 
+
+
+@media(max-width:700px){
+    
+    .af{
+       position: relative;
+       left: 50px;
+       top: -67px;
+       margin-left: 310px;
+       margin-top: -35px;}}
+ 
+
+
+
+
+
+
+
+.a2{
+     
+        margin-left: 222px;
+       margin-top: -27px;
+       position: relative;
         left: 140px;
-        top: -56px;
+        top: -63px;}
+
+
+
+
+@media(max-width:700px){
+    
+    .a2{
+       margin-left: 222px;
+       margin-top: -27px;
+       position: relative;
+        left: 140px;
+        top: -63px;}
     }
+
+
+
+
+
+
+
+
+
+
+
+
+    .f{
+
+ margin-left: 182px;
+    position: relative;
+    top: -63px;
+    left: 190px;}
+@media(max-width:700px){
     
-    .f{position: relative;
-        left: 190px;
-        top: -56px;}
+    .f{
+      margin-left: 182px;
+    position: relative;
+    top: -63px;
+    left: 190px;}}
+ 
+  .d{margin-left: 365px;
+    margin-top: -7px;
+    position: relative;
+    top: -65px;
+    left:10px;}
+
+
+    @media(max-width:700px){
     
-    .d{position: relative;
-        left: 323px;
-        top: -56px;}
+    .d{margin-left: 365px;
+    margin-top: -7px;
+    position: relative;
+    top: -65px;
+    left:10px;
+}}
+      
+
+.ap{
+
+position: relative;
+    margin-left: 385px;
+    margin-top: -108px;
+    top: -64px;
+}
+ @media(max-width:700px){
+ap{
+
+position: relative;
+    margin-left: 385px;
+    margin-top: -108px;
+    top: -64px;
+}}
+ 
     
+.tom{
+position: relative;
+    margin-left: 385px;
+    margin-top: -108px;
+    top: -64px;
+
+
+
+}
+
+
+
+    @media(max-width:700px){
+
+
+.tom{
+position: relative;
+    margin-left: 385px;
+    margin-top: -108px;
+    top: -64px;
+}}
+
+
+
+.s{
+position: relative;
+    margin-left: 371px;
+    margin-top: -108px;
+    top: -99px;}
+
+
+
+
     
     
     footer{
@@ -274,4 +546,4 @@
      footer .copyright{
        
         text-align: center;
-    } }   }      
+    } }        
