--- a/css/huuda.css
+++ b/css/huuda.css
@@ -1,287 +1,377 @@
-.myp{
-    color:palevioletred;
-    font-size:40px;
-    background-color:blanchedalmond;
-    background-size:contain;
+.myp {
+    /*fixed*/
+    color: rgb(26, 2, 23);
+    font-size: 40px;
+    background-color: blanchedalmond;
+    background-size: contain;
+    font-family: 'Allan';
+}
 
-    
-}
-.one{
-background-image:url("paper.jpg");
-background-size:contain;
+.tapbook {
+    /*fixed*/
+    position: relative;
+    height: 150px;
 
 }
-.two{
-    font-style:italic;
-    color:bisque;
-    background-size:contain;
-    
+
+.tapbook table td {
+    /*fixed*/
+    font-family: 'Akaya Kanadaka';
+    color: #046236;
 }
-.flex1{
-    color:#d4acc8;
-    text-decoration: none;
-    background-color:  rgb(105, 90, 23);
-    width: 80px;
-    height: 80px;
-    border-top-left-radius: 24px;
-    border-bottom-right-radius: 20px;
-    margin:20px;
-    text-align: center;
-    text-transform: capitalize;
-    position:fixed;
-    bottom: 350px;
-    right: 65%;
+
+.tapbook table th {
+    font-family: 'Aladin';
+    color: #da9413;
 }
-.flex2{
-    color:#d4acc8;
-    text-decoration:none;
-    background-color:  rgb(105, 90, 23);
-    width: 80px;
-    height: 60px;
-    margin: 10px;
-    border-top-left-radius: 24px;
-    border-bottom-right-radius: 20px;
-    margin:20px;
-    text-align: center;
-    text-transform: capitalize;
-    position:fixed;
-    bottom: 350px;
-    right:45%;
+
+.one
+
+/*fixed*/
+    {
+    background-color: #b4dee5;
+    background-size: contain;
+    position: absolute;
 }
-.flex3{
-    color:#d4acc8;
+
+.two {
+    /*fixed*/
+    font-family: 'Artifika';
+    color: rgb(200, 24, 253);
+    background-size: contain;
+    font-size: 25px;
+
+}
+
+.flex1 {
+    /*fixed*/
+    color: #d4acc8;
     text-decoration: none;
     background-color: rgb(105, 90, 23);
     width: 80px;
     height: 80px;
     border-top-left-radius: 24px;
     border-bottom-right-radius: 20px;
-    margin:20px;
+    margin: 20px;
     text-align: center;
     text-transform: capitalize;
-    position:fixed;
+    position: flex;
+    bottom: 350px;
+    right: 65%;
+}
+
+.flex2 {
+    /*fixed*/
+    color: #d4acc8;
+    text-decoration: none;
+    background-color: rgb(105, 90, 23);
+    width: 80px;
+    height: 60px;
+    margin: 10px;
+    border-top-left-radius: 24px;
+    border-bottom-right-radius: 20px;
+    margin: 20px;
+    text-align: center;
+    text-transform: capitalize;
+    position: flex;
+    bottom: 350px;
+    right: 45%;
+}
+
+.flex3 {
+    /*fixed*/
+    color: #d4acc8;
+    text-decoration: none;
+    background-color: rgb(105, 90, 23);
+    width: 80px;
+    height: 80px;
+    border-top-left-radius: 24px;
+    border-bottom-right-radius: 20px;
+    margin: 20px;
+    text-align: center;
+    text-transform: capitalize;
+    position: flex;
     bottom: 350px;
     right: 20%;
 
 }
 
-.flex1:hover{
-color:rgb(80, 165, 94);
-text-decoration: dotted;
-}
-.flex1:active{
-    color:rgb(157, 25, 25);
-    text-decoration: none;
-    
-}
-.flex2:hover{
-    color:rgb(80, 165, 94);
+.flex1:hover {
+    color: rgb(80, 165, 94);
     text-decoration: dotted;
+}
+
+.flex1:active {
+    color: rgb(157, 25, 25);
+    text-decoration: none;
+
+}
+
+.flex2:hover {
+    color: rgb(80, 165, 94);
+    text-decoration: dotted;
+}
+
+.flex2:active {
+    color: rgb(157, 25, 25);
+    text-decoration: none;
+
+}
+
+.flex3:hover {
+    color: rgb(80, 165, 94);
+    text-decoration: dotted;
+}
+
+.flex3:active {
+    color: rgb(157, 25, 25);
+    text-decoration: none;
+
+}
+
+.listis1 {
+    /*fixed*/
+    color: rgb(2, 21, 24);
+    font-family: 'Arvo';
+    font-size: 22px;
+}
+
+.type {
+    width: 300;
+    margin: auto;
+    overflow: hidden;
+}
+
+.type ul {
+    padding: 0;
+    width: 1550px;
+    list-style: none;
+    position: relative;
+    animation: sliding 18s ease-in-out infinite;
+}
+
+.type ul li {
+    float: left;
+    position: relative;
+}
+
+.type img {
+    width: 190px;
+    height: 190px;
+}
+
+.type h5 {
+    margin: 2px;
+    ;
+    background: #27451b;
+    padding: 10px;
+    color: #d4acc8;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 60%;
+    background-size: contain;
+    color: bisque;
+    font-style: italic;
+
+
+}
+
+.type ul:hover {
+    animation-play-state: paused;
+    background-size: contain;
+    color: bisque;
+
+
+}
+
+@keyframes sliding {
+
+    5%,
+    10% {
+        left: 0;
     }
-    .flex2:active{
-        color:rgb(157, 25, 25);
-        text-decoration: none;
-        
+
+    15%,
+    30% {
+        left: -300px;
     }
-    .flex3:hover{
-        color:rgb(80, 165, 94);
-        text-decoration: dotted;
-        }
-        .flex3:active{
-            color:rgb(157, 25, 25);
-            text-decoration: none;
-            
-        } 
-        
-        .listis1{
-            color:rgb(221, 209, 223)
-        }
-        .type{
-            width:300;
-            margin: auto;
-            overflow: hidden;
-        }
-        .type ul{
-            padding: 0;
-            width:1550px ;
-            list-style: none;
-            position: relative;
-            animation:sliding 8s ease-in-out infinite;
-        }
-        .type ul li{
-            float:left;
-            position: relative;
-        }
-        .type img{
-            width: 190px;
-            height: 190px;
-        }
-        .type h5{
-            margin: 2px; ;
-            background: #27451b;
-            padding: 10px;
-            color:#d4acc8;
-            text-align: center;
-            position: absolute;
-            bottom:0 ;
-            width: 60%;
-            background-size:contain;
-            color:bisque;
-            font-style:italic;
 
-    
-        }
-        .type ul:hover{
-            animation-play-state:paused;
-            background-size:contain;
-            color:bisque;
+    35%,
+    50% {
+        left: -600px;
+    }
 
-    
-        }
-        @keyframes sliding{
-            5%,10%{left: 0;}
-            15%,30%,{left: -300px;}
-            35%,50%{left: -600px;}
-            55%,70%{left:-900;}
-            75%,90%{left:-1280px;}
-        }
-        .shopp{
-            background-color:#7b8388 ;
-            background-color:0 900px;
-            text-align: center;
-            font-style:normal;
-            text-transform: uppercase;
-            }
-        body{
-       margin: 0;
-       padding: 0;
-       background: #e8ffe5;
-       font-family: sans-serif;
-        }
-        .contain{
-            width: 1200px;
-           margin: 70px auto 0;
-           display: flex;
-           flex-direction: row;
-           flex-wrap: wrap;
-        }
+    55%,
+    70% {
+        left: -900px;
+    }
 
-        .contain .box{
-            position: relative;
-            width: 300px;
-            height: 300px;
-            background: rgb(0, 242, 255);
-            margin: 10px;
-            box-sizing: border-box;
-            display: inline-block;
-        }
-        .contain .box .imgbox{
-            position: relative;
-            overflow: hidden;
-        }
-       .contain .box .imgbox img{
-           max-width: 100%;
-           transition:transform 2s;
-       }
-       .contain .box:hover .imgbox img{
-           transform: scale(1.2);
-       }
-     .contain .box .detail{
-         position:absolute;
-         top: 10px;
-         left: 10px;
-         bottom: 10px;
-         right: 10px;
-         background:rgba(0,0, 0,.8);
-         transform: scaleX(0);
-         transition: transform .5s;
+    75%,
+    90% {
+        left: -1280px;
+    }
+}
 
-     }
-     .contain .box .detail .contact{
-         position: absolute;
-         top:50%;
-         transform: translateY(-50%);
-         text-align: center;
-         padding: 15px;
-         color:rgb(228, 164, 164);
-     }
-     .contain .box .detail .contact h3{
-         margin: 0;
-         padding: 0;
-         font-size: 20px;
-         color: rgba(234, 234, 125, 0.916);
-     }
-     .contain .box:hover .detail{
-        transform: scaleX(1);
-     }
-     fouter{
-         display: flex;
-        /* felx-warp:warp;*/
-         justify-content: space-between;
-         background-color: #c7cee0
-     }
-     footer.col{
-         display: flex;
-         flex-direction: column;
-         align-items: flex-start;
-         margin-bottom: 20px;
-     }
-     footer h4{
-         font-size: 14px;
-         padding-bottom: 20px;
-     }
-footer p{
+.shopp {
+    background-color: #7b8388;
+    background-color: 0 900px;
+    text-align: center;
+    font-style: normal;
+    text-transform: uppercase;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background: #e8ffe5;
+    font-family: sans-serif;
+}
+
+.contain {
+    width: 1200px;
+    margin: 70px auto 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.contain .box {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background: rgb(0, 242, 255);
+    margin: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+.contain .box .imgbox {
+    position: relative;
+    overflow: hidden;
+}
+
+.contain .box .imgbox img {
+    max-width: 100%;
+    transition: transform 2s;
+}
+
+.contain .box:hover .imgbox img {
+    transform: scale(1.2);
+}
+
+.contain .box .detail {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, .8);
+    transform: scaleX(0);
+    transition: transform .5s;
+
+}
+
+.contain .box .detail .contact {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    padding: 15px;
+    color: rgb(228, 164, 164);
+}
+
+.contain .box .detail .contact h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    color: rgba(234, 234, 125, 0.916);
+}
+
+.contain .box:hover .detail {
+    transform: scaleX(1);
+}
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #E3E6F3;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+footer h4 {
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+
+footer p {
     font-size: 13px;
     margin: 0 0 8px 0;
-    
 }
-fouter a{
-    font-size:13px;
+
+footer a {
+    font-size: 13px;
     text-decoration: none;
-    color:#222;
+    color: #222;
     margin-bottom: 10px;
 }
-footer.follow{
+
+footer .follow {
     margin-top: 20px;
+
 }
-footer.follow i{
-    color:#465b52;
+
+footer .follow i {
+    color: #465b52;
     padding-right: 4px;
-    cursor:pointer;
+    cursor: pointer;
 }
-footer.follow i:hover,
-footer a:hover{
-    color:#088178;
+
+footer .follow i:hover,
+footer a:hover {
+    color: #088178;
 }
-footer.copyright{
+
+.copyright {
     width: 100%;
-    text-align:center;
+    text-align: center;
 }
-@media(max-width:477px){
-    .section-p1{
+
+
+
+
+@media (max-width:477px) {
+
+    .section-p1 {
         padding: 20px;
     }
-    footer .copyright{
-        text-align:start;
+
+    footer .copyright {
+
+        text-align: center;
     }
 }
 
-.videoj{
+.videoj {
     width: 40px;
     height: 40%;
-    position:relative
-    bottom: 350px;
+    position: relative bottom 350px;
     right: 20%;
 }
-.section-p1{
-    padding: 40px 80px;
-}
-.section-m1{
-    margin: 40px 0;
-}
-body{
-    width: 100%;
-}.section-p1 {
+
+
+
+
+/*nav*/
+
+.section-p1 {
     padding: 40px 80px;
 }
 
@@ -328,13 +418,13 @@ body {
     color: #1a1a1a;
     transition: 0.3s ease;
     padding: 15px;
-   
+
     display: block;
-    
+
 }
 
 #navbar li ul {
-    
+
     position: absolute;
     left: 0;
     width: 200px;
@@ -343,7 +433,7 @@ body {
 }
 
 #navbar li ul li {
-    
+
     width: 100%;
     border-top: 1px solid rgba(0, 0, 0, 0.02);
     position: relative;
@@ -380,13 +470,14 @@ body {
 #close {
     display: none;
 }
+
 @media (max-width:799px) {
 
-    .section-p1{
-       padding: 40px 40px;
+    .section-p1 {
+        padding: 40px 40px;
     }
 
-    #navbar{
+    #navbar {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -397,41 +488,41 @@ body {
         height: 100vh;
         width: 300px;
         background-color: #E3E6F3;
-        box-shadow: 0 40px 60px rgba(0,0,0, 0.01);
-        padding: 80px 0 0 10px ;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.01);
+        padding: 80px 0 0 10px;
         transition: 0.3s;
     }
 
-    #navbar.active{
+    #navbar.active {
         right: 0px;
     }
 
-    #navbar li{
+    #navbar li {
         margin-bottom: 25px;
     }
 
-    #navbar li ul{
-         position: relative;
-         width: 100%;
+    #navbar li ul {
+        position: relative;
+        width: 100%;
     }
 
-    #navbar li ul li{
+    #navbar li ul li {
         background: #E3E6F3;
     }
 
-    #mobile{
-        display:flex;
+    #mobile {
+        display: flex;
         align-items: center;
-        
+
     }
 
-    #mobile i{
+    #mobile i {
         color: #1a1a1a;
         font-size: 24px;
-        padding-left:20px ;
+        padding-left: 20px;
     }
 
-    #close{
+    #close {
         display: initial;
         position: absolute;
         top: 30px;
@@ -440,41 +531,48 @@ body {
         font-size: 24px;
     }
 
-    #hero{
-         
+    #hero {
+
         height: 70vh;
         background-position: top 30% right 30%;
         padding: 0 80px;
-        
+
     }
 
-    #product1 .pro-container{
-        justify-content:center;
+    #product1 .pro-container {
+        justify-content: center;
     }
 
-    #product1 .pro{
+    #product1 .pro {
         margin: 15px;
     }
 
 
 
-.bodyy{
+    #newsletter .form {
+        width: 70%;
+    }
+}
+
+
+.bodyy {
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items:flex-start;
+    align-items: flex-start;
     min-height: 100vh;
 }
-.input[ type="checkbox"]{
+
+.input[ type="checkbox"] {
     -webkit-appearance: none;
     visibility: hidden;
     display: none;
 }
-.check
-{
+
+.check {
     position: relative;
-    display:block;
+    display: block;
     width: 40px;
     height: 20px;
     background: #092c3e;
@@ -483,34 +581,33 @@ body {
     overflow: hidden;
     transition: ease-in 0.5;
 }
-input[ type="checkbox"]:checked ~.check
-{
-background:#fff;
-box-shadow: 0 0 0 1200px #092c3e;
+
+input[ type="checkbox"]:checked~.check {
+    background: #fff;
+    box-shadow: 0 0 0 1200px #092c3e;
 }
-.check:before
-{
+
+.check:before {
     content: '';
     position: absolute;
-    top:2px;
-    left:2px;
+    top: 2px;
+    left: 2px;
     background-color: #fff;
     width: 16px;
     height: 16px;
     border-radius: 50%;
     transition: 0.5s;
 }
-input[type="checkbox"]:checked ~.check:before
-{
+
+input[type="checkbox"]:checked~.check:before {
     transform: translateX(-50px);
 }
 
-.check:after
-{
+.check:after {
     content: '';
     position: absolute;
-    top:2px;
-    right:2px;
+    top: 2px;
+    right: 2px;
     background-color: #092c3e;
     width: 16px;
     height: 16px;
@@ -518,14 +615,15 @@ input[type="checkbox"]:checked ~.check:before
     transition: .5s;
     transform: translateX(50px);
 }
-input[type="checkbox"]:checked ~.check:after
-{
+
+input[type="checkbox"]:checked~.check:after {
     transform: translateX(0px);
 }
-.imghome{
-    position:absolute;
+
+.imghome {
+    position: absolute;
     width: 0%;
-    height:100%;
+    height: 100%;
     left: 100px;
 }
 
@@ -533,15 +631,50 @@ input[type="checkbox"]:checked ~.check:after
 
 
 
+.aseeralkotb
 
+/*new*/
+    {
+    position: relative;
+    overflow: hidden;
+}
 
+.aseeralkotb iframe {
+    /*new*/
+    position: absolute;
+    height: 250;
+    width: 750;
+    left: 60%;
+    border-radius: 10px;
+    padding: auto;
+    scroll-snap-type: none;
+}
 
+.aseeralkotb h4 {
+    /*new*/
+    position: relative;
+    left: 60%;
+    color: rgba(52, 17, 42, 0.987);
+    font-family: 'Artifika';
+    font-size: larger;
+}
 
+.java11 {
+    /*new*/
+    text-align: center;
+    margin-bottom: 20px;
+    left: 70px;
+}
 
+img {
+    /*new*/
+    display: block;
+    width: 250px;
+    margin: auto;
+}
 
-
-
-
-
-
-
+button {
+    /*new*/
+    height: 50px;
+    width: 50px;
+}
