--- a/css/sprizka1.css
+++ b/css/sprizka1.css
@@ -95,36 +95,110 @@ body{
     display: none;
 }
 
-             /*pargraph*/
+ @media (max-width:799px) {
+
+    .section-p1{
+       padding: 40px 40px;
+    }
+
+    #navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0,0,0, 0.01);
+        padding: 80px 0 0 10px ;
+        transition: 0.3s;
+    }
+
+    #navbar.active{
+        right: 0px;
+    }
+
+    #navbar li{
+        margin-bottom: 25px;
+    }
+
+    #navbar li ul{/*new*/
+         position: relative;
+         width: 100%;
+    }
+
+    #navbar li ul li{/*new*/
+        background: #E3E6F3;
+    }
+
+    #mobile{
+        display:flex;
+        align-items: center;
+        
+    }
+
+    #mobile i{
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left:20px ;
+    }
+
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #hero{
+         
+        height: 70vh;
+        background-position: top 30% right 30%;
+        padding: 0 80px;
+        
+    }
+
+    #product1 .pro-container{
+        justify-content:center;
+    }
+
+    #product1 .pro{
+        margin: 15px;
+    }
+
+    #newsletter .form{
+        width: 70%;
+    }
+}
+
+.sect1{
+height: 800px;
+    background: #26204a;
+    width:100%;
+color:#e998d0;
+}
+
 
 .pargraph{
-      padding:10px;
-      margin:10px;
-      display:inline-block;
+      padding:5px;
+      margin:5px;
       font-family:sans;
       font-weight:bold;
-      font-size:27px;
+      font-size:40px;
        position: absolute;
-       top: 339px;
+       top: 360px;
+     color:#e998d0;
                    }
-.two{
-    margin: 10px;
-    display: inline-block;
-    font-family: sans;
-    font-weight: bold;
-    font-size: 27px;
-    position: absolute;
-    top: 700px;
-    left: 0px;
-    color:#64a79d;
-}
-  
 
 
 
 
 
-                /*first img*/
 .y{
    position: relative;
     padding:10px;
@@ -133,40 +207,58 @@ body{
     left: 582px;
     bottom: 0;
     right: 0;
-   width:655px;
-   height:390px; 
-                 }
-       /*header*/
+   width:900px;
+   height:600px;}
+
+
 .header{
-       font-size:100px;
+       font-size:130px;
        margin:10px;
        padding:10px;
       position: absolute;
        top: 179px;
+       color:#e998d0;}
 
+
+/*scand paragraph*/
+
+
+
+.two{
+    margin: 10px;
+    display: inline-block;
+    font-family: sans;
+    font-weight: bold;
+    font-size: 33px;
+    position: absolute;
+    top: 970px;
+    left: 0px;
+    color:#e998d0;
 }
+  
 
-     
+
+
         /*spaner*/
 
 
 
 div.h{
-        width:500px;
+        width:750px;
         height:500px;
         overflow:hidden;
         position: absolute;
-        top: 805px;
-         left:54px;
+        top: 1100px;
+         left:256px;
            
 }
 img {
-     width:500px;
+     width:750px;
       height:500px;}
 
 ul.spaner{
          display: flex;
-          animation :hhh 15s infinite;
+          animation :hhh 15s ease-in-out infinite;
          position: relative;
           padding:0;
 cursor: pointer;
@@ -178,135 +270,17 @@ ul.spaner:hover{animation-play-state: paused;
 }
 
 @keyframes hhh{
-      0%{right:0px;}
-      25%{right:500px;}
-      50%{right:1000px;}
-      75%{right:1500px;}
-      100%{right:2000px;}}
+     0% {right:0px;}
+     25%{right:750px;}
+     50%{right:1500px;}
+    75%{right:2200px;}
+      100%{right:2950px;}}
           
               /*collect*/
 
-.i-4{position: absolute;
-    top: 1296px;
-    left: 23px;
- color:#64a79d;
-    font-size: 34px;
-
-
-}
 
 
 
-
-.three1{
-       position: absolute;
-    top: 1408px;
-width:200px;
-height:200px;
-}
-
-.three2{
-    position: absolute;
-    top: 1408px;
-width:200px;
-height:200px;
-left:20%;
-}
-.three3{
-    position: absolute;
-    top: 1408px;
-width:200px;height:200px;
-left:40%;
-}
-.three4{
-   position: absolute;
-    top: 1408px;
-left:60%;
-width:200px;height:200px;
-
-}
-
-.three5{
-    position: absolute;
-    top: 1408px;
-left:80%;
-width:200px;height:200px;
-}
-
-.c1{
-
-    position: absolute;
-    bottom: -722px;
-left:0px;
-width:200px;
-height:200px;
-color:blanchedalmond;
-font-size:20px;
-}
-
-
-
-
-.c2{
-
-    position: absolute;
-    bottom: -722px;
-left:260px;
-width:200px;
-height:200px;
-color:blanchedalmond;
-font-size:20px;
-}
-
-
-.c3{
-
-    position: absolute;
-    bottom: -722px;
-left:510px;
-width:200px;
-height:200px;
-color:blanchedalmond;
-font-size:20px;
-}
-
-
-
-
-
-
-
-.c4{
-
-    position: absolute;
-    bottom: -722px;
-left:760px;
-width:200px;
-height:200px;
-color:blanchedalmond;
-font-size:20px;
-}
-
-
-
-
-
-
-
-
-
-
-
-.c5{
-
-    position: absolute;
-    bottom: -722px;
-left:1015px;
-width:200px;
-height:200px;
-color:blanchedalmond;
-font-size:20px;
-}
 
 
 
@@ -314,20 +288,34 @@ font-size:20px;
 .tt1 {
     width: 300px;
     height: 203px;
-    background:#e6e1ef21;;
+    background:#f5d4df8c;
     position: relative;
     top: 25cm;
     border-radius: 12px;
     padding: 10px;
-    margin: 10px;
+    margin: 10px;}
+
+
+.tt1:hover {
+
+transform:scale(1.2);
+cursor: pointer;
+}
+  
+
+
+.tt2:hover {
+
+transform:scale(1.2);
+cursor: pointer;
 }
 
 
-
+    
 .tt2{
     width: 300px;
     height: 203px;
-    background: #e6e1ef21;;
+    background: #f5d4df8c;
     position: relative;
     top: 712px;
     border-radius: 12px;
@@ -335,57 +323,73 @@ font-size:20px;
     margin: 10px;
 left:389px;
 }
+.tt3:hover {cursor: pointer;
 
+transform:scale(1.2) }
 
 
 .tt3{
     width: 300px;
     height: 203px;
-    background: #e6e1ef21;;
+    background: #f5d4df8c;
     position: relative;
     top: 763px;
     border-radius: 12px;
     padding: 10px;
   left:0;
   margin: 10px;
+
 }
 
-
+.tt4:hover {
+cursor: pointer;
+transform:scale(1.2) ;
+}
 
 .tt4 {
     width: 300px;
     height: 203px;
-    background: #e6e1ef21;;
+    background: #f5d4df8c;
     position: relative;
     top: 529px;
     border-radius: 12px;
     padding: 10px;
     margin: 10px;
 left:388px;
+
 }
+
+.tt5:hover {
+cursor: pointer;
+transform:scale(1.2);}
 
 .tt5 {
     width: 300px;
     height: 203px;
-    background: #e6e1ef21;;
+    background: #f5d4df8c;
     position: relative;
     top: 13px;
     border-radius: 12px;
     padding: 10px;
    left:771px;
  margin: 10px;
+
 }
+.tt6:hover {
+cursor: pointer;
+transform:scale(1.2) ;}
 
 .tt6 {
     width: 300px;
     height: 203px;
-    background: #e6e1ef21;;
+    background: #f5d4df8c;
     position: relative;
     top: 63px;
     border-radius: 12px;
     padding: 10px;
    left:771px;
  margin: 10px;
+
 }
 
 
@@ -416,7 +420,7 @@ font-size: 45px;
     top: 893px;
     padding: 10px;
     margin: 10px;
-    background: #e6e1ef21;}
+    background: #f5d4df8c;}
 
 
 
@@ -479,7 +483,8 @@ footer a:hover{
 
 
 
-@media  (max-width:477px) {
+@media  (max-width:477px)
+ {
 
     .section-p1{
         padding: 20px;
@@ -489,4 +494,3 @@ footer a:hover{
    
     text-align: center;
 }          
-
