--- a/css/nour.css
+++ b/css/nour.css
@@ -6386,6 +6386,17 @@ body {
   95%,98%{left: -10000px;}
 
 }
+.shampo,.balsam,.haircoditioner,.ko11,.oils,.sera,.creams,.pad,.for,.protene,.kiratene,.sap8at,.he,.mo,.livein,.sk,.rol,.fof,.treat{
+    margin: 1% 1% 1% 1.6% ;
+    top:0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+
+   
+}
+
+
 
 
 
