--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,18 @@
+
+.section-p1 {
+    padding: 40px 80px;
+}
+
+.section-m1 {
+    margin: 40px 0;
+}
+
+body {
+    width: 100%;
+}
+
+
+
 #header {
     display: flex;
     align-items: center;
@@ -347,6 +362,302 @@ body {
 
 
 
+/*------------------------------*/
+  /* هنا محرك البحث */
+  .topnav {
+    overflow: hidden;
+    background-color: rgb(214, 213, 213);
+    height: 80px;
+}
 
+.up {
+    text-align: center;
+    background-color: rgba(53, 19, 7, 0.42);
+    border: 1px solid rgb(180, 150, 3);
+
+}
+
+.topnav input[type=text] {
+    float: right;
+    padding: 7px;
+    border: none;
+    margin-top: 20px;
+    margin-right: 30px;
+    font-size: 17px;
+    width: 450px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid rgb(163, 139, 17);
+
+
+}
+
+@media screen and (max-width:100%) {
+    .topnav input[type=text] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+
+    .topnav input[type=text] {
+        border: 1px solid #ccc;
+    }
+}
+.icon-bar a:hover {
+background-color: #000; /* Add a hover color */
+}
+
+
+.salk {
+    float: right;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 1px solid rgb(163, 139, 17);
+    
+}
+
+.ico {
+    margin-left: 25px;
+    border-radius:100%;
+    border: 1px solid rgb(163, 139, 17);
+
+}
+
+
+.nimn {
+    text-align: center;
+    color: rgb(180, 150, 3);
+    
+
+
+
+
+
+}
+
+.goga {
+    text-align: center;
+}
+
+.loli {
+    text-align: center;
+}
+.hoho {
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    background-color: rgb(180, 150, 3);
+    border: 1px solid rgb(238, 213, 69);
+}
+
+.small {
+    position: absolute;
+    text-align: center;
+}
+
+.hoh{
+color: rgb(163, 139, 17);
+    font-family: "Sofia", sans-serif;
+    text-align: right;
+}
+
+
+.koko {
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    background-color: rgb(180, 150, 3);
+    border: 1px solid rgb(238, 213, 69);
+}
+
+.sosa {
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    background-color: rgb(180, 150, 3);
+    border: 1px solid rgb(238, 213, 69);
+}
+
+.soso {
+    color: rgb(180, 150, 3);
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: rgb(26, 2, 2);
+}
+
+
+
+.ninno {
+    position: absolute;
+    top: 25px;
+    left: 120px;
+    color: rgb(180, 150, 3);
+
+}
+
+.ninon {
+    position: absolute;
+    top: 90px;
+    left: 40px;
+    color: black;
+
+}
+
+.kako {
+    position: absolute;
+    top: 210px;
+    left: 140px;
+
+
+
+}
+
+.soso {
+    position: absolute;
+    top: 25px;
+    left: 1000px;
+    color: rgb(180, 150, 3);
+
+}
+
+.lola {
+    position: absolute;
+    top: 90px;
+    left: 920px;
+    color: rgb(5, 5, 5);
+
+}
+
+.momo {
+    position: absolute;
+    top: 210px;
+    left: 1000px;
+}
+
+.loka {
+    text-align: center;
+    color: rgb(163, 139, 17);
+
+
+
+}
+
+.yoya {
+    text-align: center;
+
+}
+
+.jojo {
+    text-align: center;
+}
+
+.amra {
+    width: 100px;
+    height: 40px;
+    text-align: center;
+    background-color: rgb(180, 150, 3);
+    border: 1px solid rgb(238, 213, 69);
+}
+
+.mySlides {
+    display: none;
+    width: 100%;
+    height: 400px;
+}
+
+.sea {
+    position: relative;
+    text-align: center;
+    color: rgb(26, 2, 2);
+}
+
+.cine {
+    position: absolute;
+    top: 25px;
+    left: 570px;
+    color: rgb(234, 234, 234);
+
+}
+
+.cinem {
+    position: absolute;
+    top: 90px;
+    left: 350px;
+    color: rgb(234, 234, 234);
+
+}
+
+.cinemo {
+    position: absolute;
+    top: 190px;
+    left: 90px;
+}
+
+.cocoo {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    background-color: rgba(53, 19, 7, 0.42);
+    border: 1px solid rgb(180, 150, 3)
+}
+
+#hoh {
+    color: aliceblue;
+}
+
+.cinemon {
+    position: absolute;
+    top: 190px;
+    left: 470px;
+}
+
+.cocooo {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    background-color: rgba(53, 19, 7, 0.42);
+    border: 1px solid rgb(180, 150, 3)
+}
+
+#hohh {
+    color: aliceblue;
+}
+.cinemonn {
+    position: absolute;
+    top: 190px;
+    left: 850px;
+}
+
+.cocoooo {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    background-color: rgba(53, 19, 7, 0.42);
+    border: 1px solid rgb(180, 150, 3)
+}
+
+#hohhh {
+    color: aliceblue;
+}
+
+.lokaa {
+    color: rgb(163, 139, 17);
+    font-family: "Sofia", sans-serif;
+
+}
+.logn{
+    border-radius: 100%;
+    border: 1px solid rgb(163, 139, 17);
+}
+.sign{
+    border-radius: 100%;
+    border: 1px solid rgb(163, 139, 17);
+}
 
 
