--- a/css/project.css
+++ b/css/project.css
@@ -1,186 +1,3 @@
-.section-p1 {
-    padding: 40px 80px;
-}
-
-.section-m1 {
-    margin: 40px 0;
-}
-
-body {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-/*header start*/
-
-
-#header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background: #E3E6F3;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-}
-
-#navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#navbar li {
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-}
-
-#navbar li a {
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #1a1a1a;
-    transition: 0.3s ease;
-    padding: 15px;
-    /*new*/
-    display: block;
-    /*new*/
-}
-
-#navbar li ul {
-    /*new*/
-    position: absolute;
-    left: 0;
-    width: 200px;
-    background: #E3E6F3;
-    display: none;
-}
-
-#navbar li ul li {
-    /*new*/
-    width: 100%;
-    border-top: 1px solid rgba(0, 0, 0, 0.02);
-    position: relative;
-    right: 15px;
-}
-
-#navbar li:focus-within>ul,
-/*new*/
-#navbar li:hover>ul {
-    display: initial;
-}
-
-#navbar li a:hover,
-#navbar li a.active {
-    color: #088178;
-}
-
-#navbar li a.active::after,
-#navbar li a:hover::after {
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #088178;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-}
-
-#mobile {
-    display: none;
-    align-items: center;
-}
-
-#close {
-    display: none;
-}
-@media (max-width:799px) {
-
-    .section-p1{
-       padding: 40px 40px;
-    }
-
-    #navbar{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        position: fixed;
-        top: 0;
-        right: -300px;
-        height: 100vh;
-        width: 300px;
-        background-color: #E3E6F3;
-        box-shadow: 0 40px 60px rgba(0,0,0, 0.01);
-        padding: 80px 0 0 10px ;
-        transition: 0.3s;
-    }
-
-    #navbar.active{
-        right: 0px;
-    }
-
-    #navbar li{
-        margin-bottom: 25px;
-    }
-
-    #navbar li ul{/*new*/
-         position: relative;
-         width: 100%;
-    }
-
-    #navbar li ul li{/*new*/
-        background: #E3E6F3;
-    }
-
-    #mobile{
-        display:flex;
-        align-items: center;
-        
-    }
-
-    #mobile i{
-        color: #1a1a1a;
-        font-size: 24px;
-        padding-left:20px ;
-    }
-
-    #close{
-        display: initial;
-        position: absolute;
-        top: 30px;
-        left: 30px;
-        color: #222;
-        font-size: 24px;
-    }
-
-    #hero{
-         
-        height: 70vh;
-        background-position: top 30% right 30%;
-        padding: 0 80px;
-        
-    }
-
-    #product1 .pro-container{
-        justify-content:center;
-    }
-
-    #product1 .pro{
-        margin: 15px;
-    }
-
-    #newsletter .form{
-        width: 70%;
-    }
-}
-
-
 * {
     padding: 0;
     margin: 0;
@@ -381,13 +198,22 @@ body {
 }
 
 .starting1 {
-    width: 780px;
+    width: 800px;
     height: 550px;
+    border-radius: 50px;
+    position:relative left 100px;
+
+   /* margin-left: 20px;
+    margin-bottom: 20px;
+    margin-right: 0px;
+    padding-right: 0px;
+    padding-top: 10px;*/
+
 }
 
 .start2 {
     max-width: 1366px;
-    height: 100vh;
+    height: 90vh;
     /* حجم الشاشة كلها 100 vh*/
     display: flex;
     justify-content: space-between;
@@ -405,9 +231,17 @@ body {
 
     color: rgb(160, 45, 30);
     font-size: 35px;
-    margin-bottom: 10px;
-    margin-top: 30px;
-    padding-left: -20px;
+    display: flex;
+    text-align: left;
+   /* margin-bottom: 1rem;
+   
+    margin-top: 300px;
+    margin-left: 2px;*/
+    position:relative;
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 20px;
+
 }
 
 
@@ -421,7 +255,7 @@ body {
     color: rgb(255, 255, 255);
 
 }
-
+/*
 .btn {
     width: 200px;
     margin-top: 100px;
@@ -443,7 +277,36 @@ body {
     text-decoration: none;
     color: #ffffff;
     font-size: 1.4rem;
+}*/
+/*JAVASCRIPT HANA*/
+.btnH {
+    width: 10rem;
+    margin-top:3rem;
+    border-radius: 0.5rem;
+    outline: none;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    background-color: rgb(105, 27, 16);
+
 }
+
+.btnH:hover {
+    border: solid white;
+    background-color: rgb(136, 32, 32);
+    cursor: pointer; /*mouse*/
+}
+
+.btnH a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.4rem;
+}
+.jsbtn{
+    color: #fff;
+    font-size: 20px;
+}
+
+
 /*mac hana*/
 .mac1 {
     color: rgb(105, 25, 18);
@@ -568,6 +431,7 @@ body {
 .hmac {
     font-size: 30px;
     color: rgb(105, 25, 18);
+    padding-left: 0;
 }
 
 #icons2 img {
@@ -590,8 +454,8 @@ body {
     margin: auto;
     padding-left: 15%;
     display: inline;
-    
-  
+
+
 }
 
 .para2 {
@@ -714,7 +578,7 @@ body {
 
 .pad {
     padding: 10px 10px 10px 10px;
-     margin: 10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
     padding-left: 30%;
 
 }
@@ -803,8 +667,8 @@ body {
 .adver {
     width: 800px;
     height: 200px;
-   margin-left: 25%;
-    margin-right:25%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 /* hardees hana*/
@@ -814,10 +678,11 @@ body {
 
 
 }
-.tit3{
+
+.tit3 {
     font-size: 55px;
     color: rgb(255, 255, 255);
-      padding-left: 220px;
+    padding-left: 220px;
 }
 
 
@@ -825,31 +690,36 @@ body {
 .hard2 {
     padding: 20px 20px 20px 20px;
 }
-.texttt{
-font-size: 30px; /*<pre>*/
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-text-align: left;
-color: #fff;
-padding-left: 80px;
-padding-top: 35px;
+
+.texttt {
+    font-size: 30px;
+    /*<pre>*/
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+    color: #fff;
+    padding-left: 80px;
+    padding-top: 35px;
 
 
 }
-.nonno{
-    color:red ;
+
+.nonno {
+    color: red;
     background-color: #fff;
     font-size: 40px;
     text-align: center;
 }
-.hardmenu{
+
+.hardmenu {
     width: 100%;
     height: 500px;
-    padding-left:40px;
-    padding-right:40px;
+    padding-left: 40px;
+    padding-right: 40px;
     padding-top: 7px;
 }
- .hana18{
-color: rgb(255, 238, 0);
+
+.hana18 {
+    color: rgb(255, 238, 0);
 }
 
 #icons5 {
@@ -863,100 +733,648 @@ color: rgb(255, 238, 0);
     background-color: rgb(0, 0, 0);
     padding: 5px;
 }
-.hardeeshh{
+
+.hardeeshh {
     color: rgb(255, 230, 0);
     font-size: 40px;
 }
-.hana123{ 
+
+.hana123 {
     font-size: 40px;
     background-color: #fff;
     color: red;
     text-align: center;
 
 }
+
 .vidhardes {
-
-
     width: 1600px;
     height: 800px;
     margin-top: 80px;
     padding-left: 20%;
     padding-right: 20%;
-  
-}
-/*kfc*/
-.kfc1{
-    background-color: #fff;
-}
-.kfchana2{
-    padding: 20px 20px 20px 20px;
-    width: 100px;
-    height:100px;
-    
 
 }
-.tit4{
-    font-size: 55px;
-    color: rgb(189, 48, 48);
+
+
+
+
+
+
+/*NEW*/
+/*kfc hana*/
+.kfcbackground {
+    background-color: rgb(255, 255, 255);
+}
+
+.kfc2000 {
+    text-align: center;
+    background-color: rgb(218, 45, 2);
+    color: #fff;
+    font-size: 40px;
+}
+
+.logokfc {
+    padding: 15px 15px 15px 15px;
+    width: 250px;
+    height: 250px;
+}
+
+.titkfc {
+    font-size: 60px;
+    color: rgb(0, 0, 0);
     padding-left: 220px;
 }
-footer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color:#E3E6F3;
+
+.textkfc {
+    color: rgb(218, 45, 2);
+    text-align: center;
+    font-size: 40px;
+
 }
 
-footer .col{
+.kfcmall {
+    color: rgb(0, 0, 0);
+    font-size: 41px;
+
+}
+
+.kfcmenu {
+    width: 1500px;
+    height: 1000px;
+    padding-left: 20%;
+    padding-right: 10%;
+    padding-top: 7px;
+
+}
+
+.kfcdescrption {
+
+    color: rgb(255, 255, 255);
+    background-color: black;
+    font-size: xx-large;
+    text-align: center;
+    padding-left: 40px;
+    border: rgb(218, 45, 2);
+
+}
+
+.kfckintaki {
+    color: rgb(218, 45, 2);
+    font-size: 35px;
+
+}
+
+#icons6 {
+    width: 80px;
+    display: flex;
+    margin-top: 15px;
+}
+
+#icons6 img {
+    width: 100px;
+    background-color: rgb(255, 255, 255);
+    padding: 1px;
+    border: solid rgb(218, 45, 2);
+    margin: 2px;
+}
+
+.textkfc1 {
+    color: rgb(218, 45, 2);
+    text-align: center;
+    font-size: 40px;
+    border: solid black;
+}
+
+
+/*   hana asian corner*/
+.logoasiancorner {
+
+
+    width: 300px;
+    height: 300px;
+}
+
+.discriptionasian {
+    color: black;
+    background-color: rgb(238, 219, 168);
+    font-size: 40px;
+    text-align: center;
+
+}
+
+.titac {
+    padding-left: 140px;
+    font-size: 50px;
+
+
+}
+
+.textac {
+    text-align: center;
+    color: black;
+    font-size: 40px;
+    background-color: rgb(238, 219, 168);
+}
+
+.menusofasiancorner {
+    width: 320px;
+    height: 220px;
+    display: flex;
+    padding-right: 30px;
+    padding-left: 50px;
+
+    border-radius: 3 000px;
+}
+
+.acsushi {
+    background-color: rgb(238, 219, 168);
+    color: black;
+    text-align: center;
+    font-size: 40px;
+
+
+}
+
+.menusofasiancorner2 {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    padding-right: 30px;
+    padding-left: 80px;
+}
+
+
+.acdiscrption {
+    color: black;
+    text-align: left;
+    padding-left: 60px;
+    font-size: 30px;
+}
+
+
+.asiancornericon {
+    color: black;
+    font-size: 32px;
+}
+
+#acicons {
+    width: 80px;
+    display: flex;
+    margin-top: 15px;
+}
+
+
+
+#acicons img {
+    width: 80px;
+    background-color: rgb(238, 219, 168);
+    padding: 5px;
+}
+
+
+
+
+/*PAGE 3 CAFE DESERT*/
+.cafe1 {
+    background-color: #fddeb9;
+
+}
+
+.logocafe {
+    width: 750px;
+    height: 500px;
+    border-radius: 50px;
+}
+
+.cafe2 {
+    max-width: 1366px;
+    height: 100vh;
+    /* حجم الشاشة كلها 100 vh*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 0 5rem;
+}
+
+.cafe2 .cafe3 {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
 }
 
-footer h4{
-    font-size: 14px;
-    padding-bottom: 20px;
-}
+.cafe4 {
 
-footer p{
-    font-size: 13px;
-    margin: 0 0 8px 0;
-}
-
-footer a{
-    font-size: 13px;
-    text-decoration: none;
-    color: #222;
+    color: rgb(136, 79, 14);
+    font-size: 33px;
     margin-bottom: 10px;
+    margin-top: 30px;
+    padding-left: -20px;
 }
 
-footer .follow{
-    margin-top: 20px;
+
+.cafe3 p {
+    color: rgb(136, 79, 14);
+    font-size: 20px;
 
 }
 
-footer .follow i{
-    color: #465b52;
-    padding-right: 4px;
+.cafe3 p span {
+    color: rgb(58, 30, 0);
+
+}
+
+.boldcafe {
+
+    color: rgb(58, 30, 0);
+
+}
+
+.btncafe {
+    width: 200px;
+    margin-top: 100px;
+    border-radius: 50px;
+    outline: none;
+    border: none;
+    padding: 0.75rem 1.5rem;
+    background-color: rgb(136, 79, 14);
+
+}
+
+.btncafe:hover {
+    border: solid white;
+    background-color: rgb(136, 79, 14);
     cursor: pointer;
 }
 
-footer .follow i:hover,
-footer a:hover{
-    color: #088178;
+.btncafe a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1.4rem;
+}
+
+/*starbucks hana mohamed*/
+
+
+.sbtop {
+    width: 100%;
+    height: 450px;
+}
+
+.discriptionstarbucks {
+    background-color: rgb(42, 116, 70);
+    color: #fff;
+    font-size: 35px;
+    text-align: center;
+}
+
+.logostarbucks {
+    width: 150px;
+    height: 150px;
+    padding: 20px 20px 20px 20px;
+}
+
+.titleofsb {
+    color: rgb(42, 116, 70);
+    padding-left: 90px;
+    font-size: 45px;
+}
+
+.sbdiscrption {
+    font-size: 24px;
+    background-color: rgb(42, 116, 70);
+    color: #fff;
+    padding-left: 25px;
+}
+
+#sticons {
+    width: 70px;
+    display: flex;
+    margin-top: 15px;
+}
+
+#sticons img {
+    width: 80px;
+    background-color: rgb(255, 255, 255);
+    padding: 1px;
+    margin: 2px;
+    border: solid rgb(42, 116, 70);
+
+}
+
+.starbicon {
+    font-size: 30px;
+    padding-left: 10px;
+    color: #fff;
+    background-color: rgb(42, 116, 70);
+}
+
+/*SLISER */
+.slidersb
+
+/*div*/
+    {
+    width: 1000px;
+    margin: auto;
+    overflow: hidden;
+    /* عشان ميظهرش حاجة برا ال100 px*/
+
+}
+
+.list1sb
+
+/* ul */
+    {
+    width: 6000px;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    position: relative;
+    /* بتحررك  */
+    animation: slidingsb 12s ease-in-out infinite
+        /*هيشتغل*/
+}
+
+.listtsb
+
+/*il*/
+    {
+
+    float: left;
+    position: relative;
+}
+
+
+.heddingsb
+
+    {
+    margin: 0;
+    background: rgb(42, 116, 70);
+    padding: 7px;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+
+@keyframes slidingsb {
+
+    3%,
+    18% {
+        left: 0
+    }
+
+    21%,
+    36% {
+        left: -500px;
+    }
+
+    39%,
+    54% {
+        left: -1000px;
+    }
+
+    57%,
+    72% {
+        left: -1500px;
+    }
+
+    75%,
+    90% {
+        left: -2000px;
+    }
+
+    92%,
+    100% {
+        left: -2000px;
+    }
+}
+
+/*table starbucks*/
+.tablesb  {
+    border: 2px solid rgb(42, 116, 70) ;
+    padding: 10px;
+    font-size: 35px;
+    width: 6600px;
+    height: 100%;
+    color: rgb(42, 116, 70);
+    background-color: rgb(255, 250, 250);
+}
+.colorth .tablesb{
+    border: 2px solid rgb(42, 116, 70) ;
+    padding: 10px;
+    font-size: 35px;
+    width: 6600px;
+    height: 100%;
+  background-color: rgb(42, 116, 70);
+  color: rgb(255, 250, 250);
+}
+.startable {
+    border: 4px solid rgb(42, 116, 70);
+    width: 1500px;
+    height: 350px;
+    text-align: center;
+ 
+}
+
+.captionsb {
+    font-size: 50px;
+    font-weight: bold;
+    padding: 14px;
+    background-color: #fff;
+    color: rgb(42, 116, 70);
+
+}
+/*two imgs*/
+.twosb{
+   
+   justify-content: center;
+    display: inline;
+    width: 300px;
+    height: 300px;
+    border-radius: 300px;
+ 
+}
+
+
+/*dunkindounts*/
+.dounkindounts{
+    background-color:rgb(228, 60, 144);
+    color: rgb(228, 60, 144);
+}
+.dddd{
+    background-color: rgb(228, 60, 144);
+}
+.discriptiondd{
+    color: rgb(228, 60, 144);
+    background-color: #fff;
+    text-align: center;
+    font-size: 35px;
+}
+.logodd{
+    width: 200px;
+    height: 200px;
+    padding: 20px 20px 20px 20px;
+}
+.titleofdd
+{background-color: #fff;
+color: rgb(231, 93, 14);
+padding-left: 100px;
+font-size: 45px;
+
+}
+.titleofdd2{
+background-color: #fff;
+color: rgb(228, 60, 144);
+}
+.dddiscrption{
+   
+font-size: 38px;  
+ color: rgb(228, 60, 144);
+    background-color: #fff;text-align: center;
+
+}
+/*icon dd*/
+.dddicon{
+    color: #fff;
+    font-size: 30px;
+    padding-left: 15px;
+}
+#ddicons {
+    width: 80px;
+    display: flex;
+    margin-top: 15px;
 }
 
 
 
-
-
-@media  (max-width:477px) {
-
-    .section-p1{
-        padding: 20px;
-    }
-
-     
+#ddicons img {
+    width: 80px;
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+}
+.twodd{
+   
+   
+     display: inline;
+    width: 400px;
+     height: 400px;
+   border-radius: 400px;
+   padding: 20px;
+   
+ }
+  .ddhana{
+background-color: #fff;
+font-size: 38px;
+color: rgb(231, 93, 14);
+text-align: center;
+ }
+ .ddmall{
+     color: rgb(228, 60, 144);
  }
 
+ /*HOME icons
+ #iconshome img {
+    width: 80px;
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    border: solid black;
+   margin-left: 5px;
+}
+
+#iconshome {
+    width: 80px;
+    display: flex;
+    margin-top: 15px;
+}
+
+.homeicons{
+    color: black;
+    font-size: 30px;
+    padding-left: 20px;
+}*/
+/*java script*/
+.formjs{
+    background: #fff;
+    margin: 10px auto;
+    width: 80%;
+    height: 1500px;
+    padding: 20px;
+    text-align: left;
+    border-radius: 20px;
+}
+.titlejs{
+    margin: 10px auto;
+    font-family:'changa',sans-serif;
+    font-size: 30px;
+}
+label, .col-form-label{
+    text-align: center;
+    font-size: 20px;
+}
+input[ type=text],select{
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 36px !important;
+}
+select{
+    width: 100%;
+    font-size: 20px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: transparent;
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: 5px;
+    background-position: left;  
+}
+input[type=checkbox], input[type=radio]{
+    margin-left: 5px;
+
+}
+label{
+    cursor: pointer;
+}
+.hanaform {
+    background-color: rgb(25, 25, 66);
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+}
+.reshana{
+    font-size:25px ;
+    color:rgb(25, 25, 66);
+}
+.subend{
+    color: rgb(25, 25, 66);
+    font-size: 30px;
+    border-radius: 10px;
+    margin-left: 40px;
+    margin-top: 10px;
+
+}
+.loginjs{
+    color: #fff;
+    background-color: rgb(25, 25, 66);
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
+.sizejs{
+    width: 300px;
+    height: 35px;
+    margin-left: 20px;
+    margin-bottom: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+.btnform{
+    color: rgb(25, 25, 66);
+    font-size: 30px;
+    border-radius: 7px;
+    margin-left: 220px;
+
+
+}
