--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,41 @@ footer .copyright{
     animation-duration: 1.5s;
   }
 
+/*theme*/
+
+label{
+    position: absolute;
+    width: 45px;
+    height: 22px;
+    right: 20px;
+    top: auto;
+    border: 2px solid ;
+    border-radius: 20px;
+}
+
+ label:before{
+     position: absolute;
+     content: "";
+     width: 20px;
+     height: 20px;
+     left: 1px;
+     top: 1px;
+     border-radius: 50%;
+     cursor: pointer;
+     background: #000;
+     transition: 0.4s;
+
+ }
+
+ label.active:before{
+    left: 24px;
+    background: #fff;
+}
+body.night{
+    background: #000;
+    color: #fff;
+}
+
 
 
 
